test/classes/delete-free/type-casting.errors.good
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed unmanaged MyClass
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed owned MyClass
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed borrowed MyClass?
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed unmanaged MyClass?
type-casting.chpl:5: In function 'makeBorrowed1':
type-casting.chpl:6: error: duplicate decorators - borrowed owned MyClass?
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed unmanaged MyClass
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed owned MyClass
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass?
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed unmanaged MyClass?
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed owned MyClass?
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed borrowed MyClass?
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed unmanaged MyClass?
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed borrowed MyClass?
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed borrowed MyClass?
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed unmanaged MyClass?
type-casting.chpl:19: In function 'makeBorrowedQ1':
type-casting.chpl:20: error: duplicate decorators - borrowed borrowed MyClass?
