test/classes/delete-free/type-casting.compopts
-sDuplicateManagement=false # type-casting.good
-sDuplicateManagement=true  # type-casting.errors.good
